ollama-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: ollama-pv-storage
              mountPath: /root/.ollama
          ports:
            - name: http
              containerPort: 11434
              protocol: TCP
          resources:
            requests:
              memory: "8Gi"
              cpu: "2"
            limits:
              memory: "14Gi"
              cpu: "3"
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: ollama-pv-storage
          persistentVolumeClaim:
            claimName: ollama-pvc
      priorityClassName: system-node-critical
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-service-node-port
spec:
  type: NodePort
  selector:
    name: ollama
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      nodePort: 31434
      protocol: TCP
