openwebui-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webui
  template:
    metadata:
      labels:
        name: webui
    spec:
      containers:
        - name: webui
          image: ghcr.io/open-webui/open-webui:main
          volumeMounts:
          - mountPath: /app/backend/data
            name: openwebui-pv-storage
          ports:
            - name: webui-http
              containerPort: 8080
              protocol: TCP
                #          readinessProbe:
                #            httpGet:
                #              path: /
                #              port: http
                #            initialDelaySeconds: 10
                #            periodSeconds: 10
                #            timeoutSeconds: 1
                #            successThreshold: 1
                #            failureThreshold: 3
                #          livenessProbe:
                #            httpGet:
                #              path: /
                #              port: http
                #            initialDelaySeconds: 10
                #            periodSeconds: 10
                #            timeoutSeconds: 1
                #            successThreshold: 1
                #            failureThreshold: 3
      volumes:
      - name: openwebui-pv-storage
        persistentVolumeClaim:
          claimName: openwebui-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: ollama
spec:
  type: NodePort
  selector:
    name: webui
  ports:
  - port: 8080
    name: http
    targetPort: webui-http
    nodePort: 30080
    protocol: TCP
