openwebui-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webui
  template:
    metadata:
      labels:
        name: webui
    spec:
      containers:
        - name: webui
          image: ghcr.io/open-webui/open-webui:main
          volumeMounts:
            - mountPath: /app/backend/data
              name: openwebui-pv-storage
          ports:
            - name: webui-http
              containerPort: 8080
              protocol: TCP
      volumes:
        - name: openwebui-pv-storage
          persistentVolumeClaim:
            claimName: openwebui-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: ollama
spec:
  type: NodePort
  selector:
    name: webui
  ports:
    - port: 8080
      name: http
      targetPort: webui-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-ingress
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webui.service
      secretName: ollama
  rules:
    - host: webui.service
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: webui
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-ingress
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webui.service
      secretName: ollama
  rules:
    - host: webui.service
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: webui
                port:
                  number: 80
